tests/should_succeed/eof_no_newline.jou
import "stdlib/io.jou"

def main() -> int:
    printf("Hi\n")  # Output: Hi
    return 0