tests/should_fail/double_definition.jou
def main() -> int:
    return '\0'

def main() -> int:  # Error: a function named "main" already exists
    return '\0'
